api-gateway/k8s/manifests/11-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: proxy-server-peer-authentication
  namespace: proxy-server
spec:
  mtls:
    mode: STRICT
