api-gateway/k8s/manifests/7-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: proxy-server-server
  name: proxy-server
  namespace: proxy-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/app: proxy-server
