api-gateway/k8s/manifests/10-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: proxy-server
spec:
  selector:
    # kubectl get pods -n istio-ingress --show-labels
    # Search istio=gateway use this label for selector
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "app.service.api"
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - "app.service.api"
    #   tls:
    #     credentialName: api-example-crt
    #     mode: SIMPLE
